<resources>
    <string name="app_name">QuizGame</string>
    <string name="start">Start</string>
    <string name="back">Back</string>
    <string name="level">Level: </string>
    <string name="answer1"> 1 </string>
    <string name="answer2"> 2 </string>
    <string name="textcontinue"> Продолжить </string>
    <string name="level1"> Level: 1 </string>
    <string name="level2"> Level: 2 </string>
    <string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>
</resources>